[project]
name = "blog-writing-agent-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [pydantic,
langgraph,
langchain-core,
langchain-openai,
langchain-community,
tavily-python,
python-dotenv,
google-genai,
streamlit,
pandas
]
